Add example test case for PREVIEW.